@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 9cd7750973da05b8004f16c902c01b89d561180b ChangeLog
+SHA1 c6dd9088c278b3cefa12da35ebfdd71e48b63091 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 438bce778b89aa218171c246b91833627cdcb314 META.yml
-SHA1 692bbfcc77a2b14d6f8d1c25842562fe69d59a57 MYMETA.json
-SHA1 962ba21ce22ac5777bcaa9ce89017fd3268d28b5 MYMETA.yml
-SHA1 ed1c13338537583314a43acdc48dd8065c1a96fa Makefile.PL
+SHA1 8e59ebcfbb93077a9cd7e25294a2860c0b9738e0 META.yml
+SHA1 fee86c823d1d0a80c0626fe7ea2f5be67714e0cb MYMETA.json
+SHA1 2eb46b691219ae5c02172a559e0289a4db1ac0b3 MYMETA.yml
+SHA1 34d261b8e11f5fe7d6b7461fef2d39346aab5466 Makefile.PL
 SHA1 cbcb130fc9fe3f4d4dd8263e7b4ee4b39b182bd1 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 39cf02b95d140e1dd95b4c7486b225f29eacb90a bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 f1dd82c16fc6894c7949d64c481782cfed7a59b0 install_mozrepl_plugin.ahk
-SHA1 3ed57ae3848395988fb6630c7fc48795d42fdc6e lib/Net/FullAuto.pm
+SHA1 4297615ac8fc8de5565347b3dd9652fe32b86d5f lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 b2282d66e77abab818cb5c894e164f82db09b720 lib/Net/FullAuto/Distro/fa_code.pm
@@ -56,7 +56,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlDkWdsACgkQJM3IZYB6aOrwMwCfeVLsBzhp8vhMvx/1wAq5VJa8
-WvAAn02wm4WFEKh9QAZHXfusBfXwDFXX
-=F0cM
+iEYEARECAAYFAlDkchAACgkQJM3IZYB6aOrBKACgrXgYZ4wvU28eEMIOFlgtvx3C
+Wx0AoIPkEfqSL5JiA6jHkgGG0iBtvE5n
+=VS7h
 -----END PGP SIGNATURE-----
