@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.999960';
+our $VERSION='0.999961';
 
 
 use 5.005;
