@@ -21,6 +21,13 @@
 
 2013-01-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
+        * Version 0.999961 released.
+
+        * More code to attempt to fix Firefox download.
+
+
+2013-01-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
         * Version 0.999960 released.
 
         * More code to attempt to fix Firefox download.
